syntax = "proto3";

option csharp_namespace = "GrpcServiceABM";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CreateUser{
	User user =1;
}

message DeleteUser{
	string username=1;
}
message ModifyUser{
	UserView user=1;
}
message UserView{

}